bloodbank/auth-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
  namespace: bloodbank
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: auth-server:dev
        ports:
        - containerPort: 8080
  selector:
    matchLabels:
      app: auth-server
