bloodbank/db-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-deployment
  namespace: sample
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: days-app
    spec:
      containers:
      - name: days-app-container
        image: rest-controller:dev
        ports:
        - containerPort: 8080
  selector:
    matchLabels:
      app: days-app
