bloodbank/admin-view-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-front-service
  namespace: bloodbank
  labels:
    env: dev
    app: admin-front-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30006
  selector:
    app: admin-front
