bloodbank/donor-view-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
  labels:
    env: dev
    app: nginxservice
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30036
      targetPort: 80
      name: http
  selector:
    app: nginx
