bloodbank/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: days-app-ingress
  namespace: bloodbank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:
                name: rest-controller-service
                port:
                  number: 8080
